fix tag list on mobile

--- a/style.css
+++ b/style.css
@@ -1935,4 +1935,8 @@ a.tag {
         margin-top: 10px;
         margin-left: 10px;
     }
+    .tag-list {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
 }
